--- a/package.json
+++ b/package.json
@@ -28,5 +28,24 @@
   "bugs": {
     "url": "https://github.com/IsenrichO/ferro-management/issues"
   },
-  "homepage": "https://github.com/IsenrichO/ferro-management#readme"
+  "homepage": "https://github.com/IsenrichO/ferro-management#readme",
+  "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.12.2",
+    "eslint-plugin-react": "^6.8.0",
+    "node-sass": "^4.1.1",
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-hot-loader": "^1.3.1",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
+  }
 }
