--- a/package.json
+++ b/package.json
@@ -4,24 +4,22 @@
   "description": "Version control and source code for Raleigh, NC-based private equity firm, Ferro Management, Inc.",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js",
+    "start:dev": "webpack-dev-server --inline --colors",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IsenrichO/ferro-management.git"
   },
   "keywords": [
-    "Ferro",
-    "Management",
-    "Inc.",
+    "Ferro Management, Inc.",
     "FMG",
-    "Private",
-    "Equity",
+    "Private Equity",
     "Raleigh",
-    "Markus",
-    "Isenrich",
-    "Oliver",
-    "Isenrich"
+    "Markus Isenrich",
+    "Oliver Isenrich"
   ],
   "author": "Oliver Isenrich",
   "license": "MIT",
@@ -34,10 +32,13 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
+    "file-loader": "^0.9.0",
+    "json-loader": "^0.5.4",
     "node-sass": "^4.1.1",
     "react": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
